fixes tiers layout issues

--- a/scss/_component-servicebot-billing-embed-client.scss
+++ b/scss/_component-servicebot-billing-embed-client.scss
@@ -201,6 +201,12 @@
         .mbf--current-services-item{
 
           .servicebot-subscription {
+            margin: 0 -8px;
+
+            h3{
+              margin: 8px;
+            }
+
             .servicebot-billing-type-selector {
               margin: 24px auto;
 
@@ -254,24 +260,25 @@
               max-width: calc(100% * (1/3));
               background-color: $color-blue;
               color: $color-white;
+              margin-bottom: $gutter;
 
               &:nth-child(1){
                 margin: {
-                  left: 0;
+                  //left: 0;
                 }
               }
 
               &:nth-child(3n){
                 margin: {
-                  left: $gutter;
-                  right: 0;
+                  //left: $gutter;
+                  //right: 0;
                 }
               }
 
               &:nth-child(3n + 1){
                 margin: {
-                  left: 0;
-                  right: $gutter;
+                  //left: 0;
+                  //right: $gutter;
                 }
               }
 
